[package]
name = "fyr_pendulum_too"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iterwindows = "0.3.0"
macroquad = {git = "https://github.com/Bytekeeper/macroquad"}
egui-macroquad = {git = "https://github.com/Bytekeeper/egui-macroquad"}
nalgebra = "0.32.3"
